--- a/_swiper.cshtml
+++ b/_swiper.cshtml
@@ -6,33 +6,43 @@
 
 @* The following DIV will show a edit-hover-toolbar to admins - see https://r.2sxc.org/EditToolbar *@
 <div @Edit.TagToolbar(Content)>
-    <!-- Slider main container -->
-    <div class="swiper-container">
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            ...
+  <h1>@Content.Title</h1>
+
+  <!-- Slider main container -->
+  <div class="swiper-container" style="width: @Content.Width; height: @Content.Height;">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper" data-swiper-autoplay="@Content.AutoplayDelay">
+      <!-- Slides -->
+      @foreach (var slide in Content.Slides)
+      {
+        <div class="swiper-slide" @Edit.TagToolbar(slide)>
+          <div class="image-wrapper" style="background-image: url(@slide.Image?w=1600&q=80)">
+            @slide.Title
+          </div>
         </div>
-        <!-- If we need pagination -->
-        <div class="swiper-pagination"></div>
-
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-
-        <!-- If we need scrollbar -->
-        <div class="swiper-scrollbar"></div>
+      }
     </div>
+
+    <!-- If we need pagination -->
+    @if(Content.Pagination) {
+      <div class="swiper-pagination"></div>
+    }
+
+    <!-- If we need navigation buttons -->
+    @if(Content.Navigation) {
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    }
+  </div>
 </div>
 
 <script src="@App.Path/node_modules/swiper/js/swiper.min.js"></script>
+
 <script>
   var mySwiper = new Swiper ('.swiper-container', {
     // Optional parameters
     loop: true,
+    autoplay: ('@Content.Autoplay' === 'True'),
 
     // If we need pagination
     pagination: {
@@ -45,10 +55,7 @@
       prevEl: '.swiper-button-prev',
     },
 
-    // And if we need scrollbar
-    scrollbar: {
-      el: '.swiper-scrollbar',
-    },
+    effect: '@Content.SlideEffect',
   })
 </script>
 
