--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -14,6 +14,31 @@
         background-size: cover;
         background-position: center;
       }
+
+      p {
+        color: #fff;
+				font-size: $font-size-base*1.25;
+				text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.5);
+        
+        &.lead { 
+          margin-bottom: $grid-gutter-width/2;
+          font-size: $font-size-base*1.8;	
+          font-weight: 600;
+
+          @include media-breakpoint-up(md)  {
+            line-height: 1.2em;
+            font-size: $font-size-base*3;	
+          }		
+          @include media-breakpoint-up(lg)  {
+            line-height: 1.2em;
+            font-size: $font-size-base*4;	
+          }				
+          @include media-breakpoint-up(xl)  {
+            line-height: 1.2em;
+            font-size: $font-size-base*5;	
+          }				
+        }
+			}	
     }
 
     .swiper-button-next,
