--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -1,3 +1,4 @@
+// Adjust these paths to your skin path if you want to recompile the SASS
 @import "../../../_default/Skins/Bootstrap 4 Instant/src/scss/_variables.scss";
 @import "../../../_default/Skins/Bootstrap 4 Instant/node_modules/bootstrap/scss/mixins/_breakpoints.scss";
 
