--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -3,6 +3,49 @@
 @import "../../../_default/Skins/Bootstrap 4 Instant/node_modules/bootstrap/scss/mixins/_breakpoints.scss";
 
 @media all {
+  .aspect-ratio {
+    &.height-16-9 {
+      padding-top: 56.25%;
+    }
+
+    &.height-4-3 {
+      padding-top: 75%;
+    }
+
+    &.height-3-2 {
+      padding-top: 66.66%;
+    }
+
+    &.height-8-5 {
+      padding-top: 62.5%;
+    }
+
+    &.height-1-1 {
+      padding-top: 100%;
+    }
+
+    &.height-16-9,
+    &.height-4-3,
+    &.height-3-2,
+    &.height-8-5,
+    &.height-1-1 {
+      width: 100%;
+
+      .inner {
+        position:  absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+  
+        .swiper-container {
+          width: 100% !important;
+          height: 100% !important;
+        }
+      }
+    }
+  }
+
   .swiper-container {
     width: 100%;
     height: 50vh;
@@ -14,6 +57,57 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+
+        .overlay-none {
+          display: none;
+        }
+
+        &.content-effect-gradient,
+        &.content-effect-gradient-wide {
+          .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+          }
+        }
+
+        &.content-position-cc,
+        &.content-position-cl,
+        &.content-position-cr {
+          .overlay-gradient {
+            background: linear-gradient(0deg, rgba(255,255,255,0) 25%, rgba(0,0,0,0.4) 50%, rgba(255,255,255,0) 75%);
+          }
+
+          .overlay-gradient-wide {
+            background: linear-gradient(0deg, rgba(255,255,255,0) 10%, rgba(0,0,0,0.4) 50%, rgba(255,255,255,0) 90%);
+          }
+        }
+
+        &.content-position-bc,
+        &.content-position-bl,
+        &.content-position-br {
+          .overlay-gradient {
+            background: linear-gradient(0deg, rgba(0,0,0,0.4) 25%, rgba(255,255,255,0) 50%);
+          }
+
+          .overlay-gradient-wide {
+            background: linear-gradient(0deg, rgba(0,0,0,0.4) 50%, rgba(255,255,255,0) 100%);
+          }
+        }
+
+        &.content-position-tc,
+        &.content-position-tl,
+        &.content-position-tr {
+          .overlay-gradient {
+            background: linear-gradient(0deg, rgba(255,255,255,0) 50%, rgba(0,0,0,0.4) 75%);
+          }
+
+          .overlay-gradient-wide {
+            background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.4) 50%);
+          }
+        }
       }
 
       p {
