--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -22,6 +22,10 @@
       padding-top: 62.5%;
     }
 
+    &.height-2-1 {
+      padding-top: 50%;
+    }
+
     &.height-1-1 {
       padding-top: 100%;
     }
@@ -30,6 +34,7 @@
     &.height-4-3,
     &.height-3-2,
     &.height-8-5,
+    &.height-2-1,
     &.height-1-1 {
       width: 100%;
 
