--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -53,6 +53,21 @@
     }
   }
 
+  [style*="--aspect-ratio"] {
+    .inner {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+
+      .swiper-container {
+        width: 100% !important;
+        height: 100% !important;
+      } 
+    }
+  }  
+
   .swiper-container {
     width: 100%;
     height: 50vh;
