--- a/_swiper.cshtml
+++ b/_swiper.cshtml
@@ -52,12 +52,13 @@
             </div>
           }
 
+          @* if we don't have slides, show a dummy slide and provide buttons to start adding *@
           @if(Content.Slides.Count == 0) {
-            <div class="arrow">
-              <div class="line"></div>
-              <div class="point"></div>
-            </div>
-            <div class="container" @* TOOLBAR HIER? *@ @Edit.TagToolbar(Content.Slides, toolbar: new[] { "%delete&show=true" } )>
+            <div class="container" @Edit.TagToolbar(Content.Slides)>
+              <div class="arrow">
+                <div class="line"></div>
+                <div class="point"></div>
+              </div>
               <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
                   <h2>Empty Slider</h2>
