--- a/_helpers.cshtml
+++ b/_helpers.cshtml
@@ -2,10 +2,12 @@
 @using ToSic.Razor.Blade;
 
 @helper RowClasses(dynamic data) {
-<text>row h-100 @(data.TextPosition == "cl" || data.TextPosition == "cc" || data.TextPosition == "cr" ? "align-items-center" : "") @(data.TextPosition == "bl" || data.TextPosition == "bc" || data.TextPosition == "br" ? "align-items-end" : "")</text>
+var textPosition = Text.First(data.TextPosition, Content.TextPosition, App.Settings.TextPosition, "none");
+<text>row h-100 @(textPosition == "cl" || textPosition == "cc" || textPosition == "cr" ? "align-items-center" : "") @(textPosition == "bl" || textPosition == "bc" || textPosition == "br" ? "align-items-end" : "")</text>
 }
 
 @helper ContentClasses(dynamic data) {
-<text>@(data.TextPosition == "tc" || data.TextPosition == "cc" || data.TextPosition == "bc" ? "text-center" : "") @(data.TextPosition == "tr" || data.TextPosition == "cr" || data.TextPosition == "br" ? "text-right" : "")</text>
+var textPosition = Text.First(data.TextPosition, Content.TextPosition, App.Settings.TextPosition, "none");
+<text>@(textPosition == "tc" || textPosition == "cc" || textPosition == "bc" ? "text-center" : "") @(textPosition == "tr" || textPosition == "cr" || textPosition == "br" ? "text-right" : "")</text>
 }
 
