--- a/_swiper.cshtml
+++ b/_swiper.cshtml
@@ -20,7 +20,7 @@
             var contentEffect = Text.First(slide.ContentEffect, Content.ContentEffect, App.Settings.ContentEffect, "none");
             var contentEffectClass = "content-effect-" + contentEffect;
 
-            <div class="swiper-slide" data-swiper-autoplay="@(Content.AutoplayDelay ?? App.Settings.AutoplayDelay)" @(Content.IsDemoItem ? "" : Edit.TagToolbar(slide, toolbar: new[] { "%delete&show=true" } ))>
+            <div class="swiper-slide" data-swiper-autoplay="@(slide.ShowDuration ?? Content.ShowDuration ?? App.Settings.ShowDuration)" @(Content.IsDemoItem ? "" : Edit.TagToolbar(slide, toolbar: new[] { "%delete&show=true" } ))>
               <div class="image-wrapper content-position-@slide.TextPosition @contentEffectClass" style='background-image: url(@Tags.SafeUrl(slide.Image + "?w=1600&q=80"))'>
                 @if(Text.Has(slide.Title) || Text.Has(slide.Text) || Text.Has(slide.LinkText)){
                   <div class="overlay overlay-@contentEffect"></div>
@@ -92,7 +92,7 @@
   appSwiperInit(
     @Content.EntityId, 
     '@(Content.Autoplay ?? App.Settings.Autoplay)', 
-    @(Content.Speed ?? App.Settings.Speed),
+    @(Content.AnimationDuration ?? App.Settings.AnimationDuration),
     @Html.Raw(Content.Effect.Configuration),
     @Html.Raw(App.Settings.EffectFallback)
   );
