--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -80,6 +80,52 @@
         background-size: cover;
         background-position: center;
 
+        &.dark-content {
+          p {
+            color: #000;
+            text-shadow: 0px 0px 16px rgba(255, 255, 255, 0.8);
+
+          }
+
+          &.content-position-cc,
+          &.content-position-cl,
+          &.content-position-cr {
+            .overlay-gradient {
+              background: linear-gradient(0deg, rgba(255,255,255,0) 25%, rgba(255,255,255,0.4) 50%, rgba(255,255,255,0) 75%);
+            }
+
+            .overlay-gradient-wide {
+              background: linear-gradient(0deg, rgba(255,255,255,0) 10%, rgba(255,255,255,0.4) 50%, rgba(255,255,255,0) 90%);
+            }
+
+            
+          }
+
+          &.content-position-bc,
+          &.content-position-bl,
+          &.content-position-br {
+            .overlay-gradient {
+              background: linear-gradient(0deg, rgba(255,255,255,0.4) 25%, rgba(255,255,255,0) 50%);
+            }
+
+            .overlay-gradient-wide {
+              background: linear-gradient(0deg, rgba(255,255,255,0.4) 50%, rgba(255,255,255,0) 100%);
+            }
+          }
+
+          &.content-position-tc,
+          &.content-position-tl,
+          &.content-position-tr {
+            .overlay-gradient {
+              background: linear-gradient(0deg, rgba(255,255,255,0) 50%, rgba(255,255,255,0.4) 75%);
+            }
+
+            .overlay-gradient-wide {
+              background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.4) 50%);
+            }
+          }
+        }
+
         .overlay-none {
           display: none;
         }
@@ -105,6 +151,8 @@
           .overlay-gradient-wide {
             background: linear-gradient(0deg, rgba(255,255,255,0) 10%, rgba(0,0,0,0.4) 50%, rgba(255,255,255,0) 90%);
           }
+
+          
         }
 
         &.content-position-bc,
